@@ -1,3 +1,8 @@
+2003-11-20  Jonathan Graehl  <graehl@isi.edu>
+
+	* src/finite.cc: -1 = randomly scale weights (of unlocked arcs)
+	after composition uniformly by (0..1]
+
 Wed Nov  5 15:46:03 2003  Jonathan Graehl  <graehl@brahms.isi.edu>
 
 	* src/fst.cc: normalization fix for zero-count tied arcs - count
